# aptaboltz

./: .gitignore  README.md  boltz.qmd  environment.yml  test_pymol.txt
.posit/assistant/: settings.json
boltz2_utils/: README  base.py  generate_boltz2_slurm.py  generate_boltz2_yaml.py  process_boltz_results.py  process_boltz_results_nolgd.py  pyproject.toml
boltz2_utils/cli/: generate_input.py  process_output.py
boltz_R_utils/: install_packages.R  processor.R
python/: CSS_input_files.py  base.py  base_join.py  boltz.ipynb  boltz.py
templates/: input_file_config.json  input_file_generator.py  leap.sh  ligand_prep.sh  model_prep.py  output_file_config.json  output_file_processing.py  process.R
templates/MD/: generate_md_slurm.py  leap.sh  ligand_prep.sh  multiwfn_steps_linux.sh  multiwfn_steps_windows.ps1  orca_steps_wsl.sh
templates/MD/R/: ions.R  md_utils.R
templates/MD/pmemd/in/: final_min.in  step1.in  step10.in  step2.in  step3.in  step4.in  step5.in  step6.in  step7.in  step8.in  step9.in
templates/MD/pmemd/in/archive/: final_min.in  step1.in  step3.in  step7.in  step8.in
templates/MD/python/: fix_pdb_elements.py  generate_md_slurm.py  generate_pmemd_inputs.py  model_prep.py  pymol_utils.py
templates/MD/slurm/: PrepAndMin.slurm
